src/main/java/com/example/pastebox/util/error/exception/InvalidPasteboxStatusException.java
package com.example.pastebox.util.error.exception;

public class InvalidPasteboxStatusException extends RuntimeException {
    public InvalidPasteboxStatusException(String message) {
        super(message);
    }
}
